# MNIST-Digit-Recognition

./: .gitignore  CMakeLists.txt  README.md
DigitR/: main.cpp
DigitR/include/: DigitR.hpp
DigitR/lib/: CMakeLists.txt
DigitR/lib/mnist/include/: MNIST_Reader.hpp
DigitR/lib/mnist/source/: CMakeLists.txt  MNIST_Reader.cpp
DigitR/lib/network/include/: Layer.hpp  Network.hpp  Neuron.hpp
DigitR/lib/network/source/: CMakeLists.txt  Layer.cpp  Network.cpp  Neuron.cpp
DigitR/lib/training/include/: Executor.hpp
DigitR/lib/training/source/: CMakeLists.txt  Executor.cpp  Gradient_Descent.cpp
executables/: CMakeLists.txt
